Allow to install debug version of AN2Linux

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,10 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            applicationIdSuffix ".debug"
+            versionNameSuffix '-DEBUG'
+        }
     }
 }
 
