--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             </intent-filter>
         </service>
 
+        <service
+            android:name=".crypto.KeyGeneratorService"
+            android:exported="false" />
+
         <activity android:name=".activities.MainSettingsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
