Add service notification to run in foreground
I'm not sure if all interface implementations are necessary but I'm not
familiar enough with android to test that they are not necessary.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,10 @@
             android:label="@string/activity_label_client_certificate"
             android:parentActivityName=".activities.MainSettingsActivity" />
 
+        <service
+            android:name=".utils.AN2LinuxService"
+            android:label="@string/utils_an2linux_service"/>
+
     </application>
 
 </manifest>
