--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,10 @@ android {
             versionNameSuffix '-DEBUG'
         }
     }
+    lintOptions {
+        // disable errors on lint
+        abortOnError false
+    }
 }
 
 dependencies {
