--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,17 +28,22 @@ android {
 ext {
     // https://developer.android.com/jetpack/androidx/versions/
 
-    materialVersion = '1.0.0'
     appcompatVersion = "1.0.2"
     annotationVersion = "1.1.0"
     preferenceVersion = "1.1.0-rc01"
+    recyclerViewVersion = "1.0.0"
+    constraintLayoutVersion = "1.1.3"
     lifecycleVersion = "2.0.0"
+
+    materialVersion = "1.0.0"
 }
 
 dependencies {
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
     implementation "androidx.annotation:annotation:$annotationVersion"
     implementation "androidx.preference:preference:$preferenceVersion"
+    implementation "androidx.recyclerview:recyclerview:$recyclerViewVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
 
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
