--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,12 @@ android {
 ext {
     // https://developer.android.com/jetpack/androidx/versions/
 
-    appcompatVersion = "1.0.2"
+    appcompatVersion = "1.1.0"
     annotationVersion = "1.1.0"
-    preferenceVersion = "1.1.0-rc01"
+    preferenceVersion = "1.1.0"
     recyclerViewVersion = "1.0.0"
     constraintLayoutVersion = "1.1.3"
-    lifecycleVersion = "2.0.0"
+    lifecycleVersion = "2.1.0"
 
     materialVersion = "1.0.0"
 }
