--- a/.gitignore
+++ b/.gitignore
@@ -142,4 +142,19 @@ fabric.properties
 .idea/gradle.xml
 
 
+# fastlane specific
+**/fastlane/report.xml
+
+# deliver temporary files
+**/fastlane/Preview.html
+
+# snapshot generated screenshots
+**/fastlane/screenshots
+
+# scan temporary files
+**/fastlane/test_output
+
+fastlane/key.json
+fastlane/.env
+
 
